@@ -28,6 +28,8 @@ glibc (2.19-12) UNRELEASED; urgency=medium
     manpage. Add a Replaces: manpages-fr-extra (<= 20141008).
   * Update French manpages translations, by David Prévot. Closes: #715289.
   * Update German manpages translations, by Helge Kreutzmann. Closes: #717979.
+  * kfreebsd/local-fbtl.diff: update to revision 5651 (from glibc-bsd).
+    Workarounds a kfreebsd 9.0 to 10.1 ABI break. Closes: #740509.
 
   [ Helmut Grohne ]
   * debian/patches/any/local-bootstrap-headers.diff: Update to handle
